--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,7 @@ venv/
 .DS_Store
 
 # Project data to keep out of git
-code/static/audio/
-code/static/uploads/
-code/trained_model/
-report/
+static/audio/
+static/uploads/
+trained_model/
 
